Dark mode fixes and improvements

--- a/guides/assets/stylesrc/_dark.scss
+++ b/guides/assets/stylesrc/_dark.scss
@@ -7,26 +7,47 @@
 
 @media (prefers-color-scheme: dark) {
   body.guide {
+
     background-color: $gray-900;
     color: #fff;
 
-    a {
+    &::-webkit-scrollbar {
+      width: 12px;
+      background-color: transparent;
+    }
+    
+    &::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+        border-radius: 10px;
+        background-color: $gray-900;
+      }
+    
+    &::-webkit-scrollbar-thumb {
+      background-color: $gray-500;
+        border-radius: 10px;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+    }
+    h1 {
+      color: $rf-brand-lightest;
+    }
+
+    a,
+    h2 a {
       &:link {
-        color: $rf-brand-light;
+        color: $rf-brand-lightest;
       }
       &:hover,
       &:active {
-        color: $rf-brand-darker;
+        color: $rf-brand-lighter;
       } // &:hover, &:active
       &:visited {
-        color: $rf-brand;
+        color: $rf-brand-lighter;
       } // &:visited
     } // a
     
     table {
       th {
-        color: $gray-900;
-        background-color: $gray-200;
+        background-color: $gray-1000;
       } // th
   
       tr {
@@ -45,12 +66,17 @@
     } // h3
 
     pre, code {
-      background-color: $gray-200;
-      color: $gray-200;
+      background-color: $gray-1000;
     } // pre, code
 
-    p code, ul code, li code, h2 code, h3 code, h4 code, h5 code, td code {
-      background-color: $gray-600;
+    p code, ul code, li code, td code {
+      background-color: $gray-650;
+      color: #fff;
+    }
+
+    h2 code, h3 code, h4 code, h5 code {
+      background-color: transparent;
+      color: #fff;
     }
 
     nav#topNav {
@@ -114,7 +140,7 @@
 
           a:hover,
           a:active {
-            color: $rf-brand-light;
+            color: $rf-brand-lighter;
           } // a:hover
         } // dd
       } // .guides-section
@@ -135,7 +161,24 @@
       #subCol {
         background-color: $gray-700; 
 
-        ol {
+        ol.chapters {
+          &::-webkit-scrollbar {
+            background-color: $gray-700;
+            width: 6px;
+          }
+          
+          &::-webkit-scrollbar-track {
+              background-color: $gray-700;
+              -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+              border-radius: 5px;
+          }
+          
+          &::-webkit-scrollbar-thumb {
+            background-color: $gray-500;
+
+              border-radius: 5px;
+              -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+          }
           li {
             a,
             a:link,
@@ -145,15 +188,41 @@
             
             a:hover,
             a:active {
-              color: $rf-brand-light;
+              color: $rf-brand-lighter;
             } // a
           } // li
         } // ol
       } // #subCol
     } // #feature
 
-    .interstitial.code {
-      background-color: $gray-200;
-    }
+    .interstitial {
+      &.code {
+        background-color: $gray-1000;
+        color: $gray-200;
+      }
+      &.note,
+      &.work-in-progress,
+      &.todo {
+        border-color: $note-dark;
+        background-color: $note-bkgnd-dark;
+      }
+    
+      &.info {
+        border-color: $tip-dark;
+        background-color: $tip-bkgnd-dark;
+      }
+    
+      &.warning {
+        border-color: $stop-dark;
+        background-color: $stop-bkgnd-dark;
+      }
+    
+      &.question {
+        border-color: $gray-600;
+        background-color: $gray-700;
+      }
+    
+
+    }  
   } // body.guide
 } // @media (prefers-color-scheme: dark
